--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,6 +1,10 @@
-{% extends "base.html" %} {% load i18n %} {% load account socialaccount %} {%
-block head_title %}{% trans "Sign In" %}{% endblock head_title %} {% block
-content %}
+{% extends "base.html" %}
+<!--Stop-->
+{% load i18n %} {% load account socialaccount %}
+<!--Stop-->
+{% block head_title %}{% trans "Sign In" %}{% endblock head_title %}
+<!--Stop-->
+{% block content %}
 
 <h1>{% trans "Sign In" %}</h1>
 
