Added inline comment for bug

--- a/templates/account/account_inactive.html
+++ b/templates/account/account_inactive.html
@@ -1,5 +1,9 @@
-{% extends "base.html" %} {% load i18n %} {% block head_title %}{% trans
-"Account Inactive" %}{% endblock head_title %} {% block content %}
+{% extends "base.html" %}
+<!--Stop-->
+{% load i18n %} {% block head_title %}
+<!--Stop-->
+{% trans "Account Inactive" %}{% endblock head_title %} {% block content %}
+<!--Stop-->
 <h1>{% trans "Account Inactive" %}</h1>
 
 <p>{% trans "This account is inactive." %}</p>
