--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,5 +1,10 @@
-{% extends "base.html" %} {% load i18n %} {% block head_title %}{% trans "Sign
-Out" %}{% endblock head_title %} {% block content %}
+{% extends "base.html" %}
+<!--Stop-->
+{% load i18n %}
+<!--Stop-->
+{% block head_title %}{% trans "Sign Out" %}{% endblock head_title %}
+<!--Stop-->
+{% block content %}
 <h1>{% trans "Sign Out" %}</h1>
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
