--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,5 +1,10 @@
-{% extends "base.html" %} {% load i18n %} {% block head_title %}{% trans "Change
-Password" %}{% endblock head_title %} {% block content %}
+{% extends "base.html" %}
+<!--Stop-->
+{% load i18n %}
+<!--Stop-->
+{% block head_title %}{% trans "Change Password" %}{% endblock head_title %}
+<!--Stop-->
+{% block content %}
 <h1>{% trans "Change Password" %}</h1>
 <p>{% trans 'Your password is now changed.' %}</p>
 {% endblock content %}
