--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -1,5 +1,11 @@
-{% extends "base.html" %} {% load i18n %} {% block head_title %}{% trans "Verify
-Your Email Address" %}{% endblock head_title %} {% block content %}
+{% extends "base.html" %}
+<!--Stop-->
+{% load i18n %}
+<!--Stop-->
+{% block head_title %}{% trans "Verify Your Email Address" %}{% endblock
+head_title %}
+<!--Stop-->
+{% block content %}
 <h1>{% trans "Verify Your Email Address" %}</h1>
 
 <p>
