--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -1,5 +1,10 @@
-{% extends "base.html" %} {% load i18n %} {% block head_title %}{% trans "Email
-Addresses" %}{% endblock head_title %} {% block content %}
+{% extends "base.html" %}
+<!--Stop-->
+{% load i18n %}
+<!--Stop-->
+{% block head_title %}{% trans "Email Addresses" %}{% endblock head_title %}
+<!--Stop-->
+{% block content %}
 <h1>{% trans "Email Addresses" %}</h1>
 {% if emailaddresses %}
 <p>
