--- a/templates/account/email_change.html
+++ b/templates/account/email_change.html
@@ -1,5 +1,10 @@
-{% extends "base.html" %} {% load i18n %} {% block head_title %} {% trans "Email
-Address" %} {% endblock head_title %} {% block content %}
+{% extends "base.html" %}
+<!--Stop-->
+{% load i18n %}
+<!--Stop-->
+{% block head_title %} {% trans "Email Address" %} {% endblock head_title %}
+<!--Stop-->
+{% block content %}
 <h1>{% trans "Email Address" %}</h1>
 {% if emailaddresses %} {% if current_emailaddress %}
 <p>
