--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -1,6 +1,11 @@
-{% extends "base.html" %} {% load i18n %} {% load account %} {% block head_title
-%}{% trans "Confirm Email Address" %}{% endblock head_title %} {% block content
+{% extends "base.html" %}
+<!--Stop-->
+{% load i18n %} {% load account %}
+<!--Stop-->
+{% block head_title %}{% trans "Confirm Email Address" %}{% endblock head_title
 %}
+<!--Stop-->
+{% block content %}
 <h1>{% trans "Confirm Email Address" %}</h1>
 
 {% if confirmation %} {% user_display confirmation.email_address.user as
