--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,5 +1,10 @@
-{% extends "base.html" %} {% load i18n %} {% load account %} {% block head_title
-%}{% trans "Password Reset" %}{% endblock head_title %} {% block content %}
+{% extends "base.html" %}
+<!--Stop-->
+{% load i18n %} {% load account %}
+<!--Stop-->
+{% block head_title %}{% trans "Password Reset" %}{% endblock head_title %}
+<!--Stop-->
+{% block content %}
 <h1>{% trans "Password Reset" %}</h1>
 
 {% if user.is_authenticated %} {% include
