--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,5 +1,10 @@
-{% extends "base.html" %} {% load i18n %} {% block head_title %}{% trans "Change
-Password" %}{% endblock head_title %} {% block content %}
+{% extends "base.html" %}
+<!--Stop-->
+{% load i18n %}
+<!--Stop-->
+{% block head_title %}{% trans "Change Password" %}{% endblock head_title %}
+<!--Stop-->
+{% block content %}
 <h1>
   {% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password"
   %}{% endif %}
