--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -1,5 +1,10 @@
-{% extends "base.html" %} {% load i18n %} {% block head_title %}{% trans "Set
-Password" %}{% endblock head_title %} {% block content %}
+{% extends "base.html" %}
+<!--Stop-->
+{% load i18n %}
+<!--Stop-->
+{% block head_title %}{% trans "Set Password" %}{% endblock head_title %}
+<!--Stop-->
+{% block content %}
 <h1>{% trans "Set Password" %}</h1>
 
 <form
