--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,19 @@
         <!-- Content Goes here -->
         {% endblock content %}
     </main>
-
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                {% for message in messages %}
+                <div class="alert {{ message.tags }} alert-dismissable fade show" id="msg" role="alert">
+                {{ message | safe }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">       
+                </button>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
     <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white">Made by Code Instituters</p>
@@ -72,6 +84,13 @@
             <i class="fab fa-youtube-square ms-3"></i>
         </p>
     </footer>
+    <script>
+        setTimeout(function() {
+            let messages = document.getElementById("msg");
+            let alert = new bootstrap.Alert(messages);
+            alert.close();
+        }, 2000);
+    </script>
 </body>
 
 </html>
