--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -68,6 +68,22 @@
               <span class="text-secondary">{{ post.number_of_likes }} </span>
             </strong>
           </div>
+          {% if request.user == post.created_by %}
+          <div class="mt-6 p-6 bg-white rounded-xl">
+            <p>This is your Alert!</p>
+
+            <a
+              href="{% url 'edit' post.id %}"
+              class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl"
+              >Edit</a
+            >
+            <a
+              href="#"
+              class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-red-500 text-white rounded-xl"
+              >Delete</a
+            >
+          </div>
+          {% else %}
           <div class="col-1">
             {% with comments.count as total_comments %}
             <strong class="text-secondary"
