--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -8,6 +8,11 @@
         <h1 class="post-title">{{ post.title }}</h1>
         <!-- Post author goes before the | the post's created date goes after -->
         <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
+        {% if user.is_authenticated and user == post.author %}
+        <a href="{% url 'edit_post' post.slug %}" class="btn btn-primary"
+          >Edit</a
+        >
+        {% endif %}
       </div>
       <div class="d-none d-md-block col-md-6 masthead-image">
         <!-- The featured image URL goes in the src attribute -->
