Created delete post functionality

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -12,6 +12,9 @@
         <a href="{% url 'edit_post' post.slug %}" class="btn btn-primary"
           >Edit</a
         >
+        <a href="{% url 'delete_post' post.slug %}" class="btn btn-danger"
+          >Delete</a
+        >
         {% endif %}
       </div>
       <div class="d-none d-md-block col-md-6 masthead-image">
