--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,23 @@
 {% extends "base.html" %} {% block content %}
+<div class="container-fluid">
+  <div class="row">
+    <h1>SCHÖNEBERG ALERT!</h1>
+    <p>Your community digital pinboard</p>
+    <p>Post an Alert to your neighbors</p>
+  </div>
+</div>
 
 <div class="container-fluid">
   <div class="row">
     <!-- Category Filter -->
-    {% for category in categories %}
     <div class="col-12 mt-3 left">
-      <h2 class="card-title">{{ category.name }}</h2>
+      <a href="{% url 'home' %}">Reset Filter</a>
+      {% for category in categories %}
+      <a href="{% url 'home' %}?query={{ query }}&category={{ category_id }}"
+        >{{ category.name }}</a
+      >
+      {% endfor %}
     </div>
-    {% endfor %}
   </div>
   <div class="row">
     <!-- Blog Entries Column -->
@@ -33,6 +43,7 @@
               <a href="{% url 'post_detail' post.slug %}" class="post-link">
                 <h2 class="card-title">{{ post.title }}</h2>
                 <p class="card-text">{{ post.excerpt }}</p>
+                <p class="card-text">{{ post.category }}</p>
               </a>
               <hr />
               <p class="card-text text-muted h6">
