Adding custom style

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,16 @@
 {% extends "base.html" %} {% block content %}
+<!-- Hero section -->
+<section class="hero">
+    <div class="left"></div>
+    <div class="right">
+        <div class="content-box">
+            <span>Your Community Pinboard!</span>
+            <h1>Join our neighborhood's digital pinboard.</h1>
+        </div>
+    </div>
+</section>
+
+
 <div class="container-fluid">
   <div class="row">
     <h1>SCHÖNEBERG ALERT!</h1>
