--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,142 +1,293 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;700&family=Playfair+Display:wght@800&display=swap');
+
+:root {
+    --primary-color: #202020;
+    --secondary-color: #F4F7FC;
+    --grey: #a6a6a6;
+}
+
+html {
+    font-size: 62.5%;
+    scroll-behavior: smooth;
+}
+
+*,
+::before,
+::after {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
-  background-color: #f9fafc;
+    font-family: 'Mulish', sans-serif;
+}
+
+h1,
+h2,
+h3 {
+    font-family: 'Playfair Display', serif;
+    font-weight: 800;
+    color: var(--primary-color);
+    margin: 1.6rem 0;
+}
+
+p {
+    font-weight: 400;
+    margin: 1.6rem 0;
+    font-size: 1.6rem;
+    color: var(--primary-color);
+    line-height: 1.5;
+}
+
+h1 {
+    font-size: 4rem;
+}
+
+@media only screen and (max-width:768px) {
+    h1 {
+        font-size: 3rem;
+    }
+}
+
+h2 {
+    font-size: 3rem;
+    letter-spacing: 1.5px;
+}
+
+h3 {
+    font-size: 2.5rem;
+    letter-spacing: 1.5px;
+}
+
+h4 {
+    font-size: 1.6rem;
+}
+
+span {
+    color: var(--grey);
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+a {
+    text-decoration: none;
+    margin: 1.6rem 0;
+    color: var(--grey);
+    font-size: 1.6rem;
+    border-bottom: 2px dotted var(--primary-color);
+}
+
+.site-container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+hr {
+    margin: 16px 0;
+}
+
+/* Nagivation */
+nav {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+nav .menu a {
+    border-bottom: none;
+    color: var(--primary-color);
+    font-weight: 700;
+    margin-left: 24px;
+}
+
+.mobile-menu {
+    display: none;
+}
+
+@media only screen and (max-width: 768px) {
+    .mobile-menu {
+        display: block;
+        font-size: 24px;
+    }
+
+    .menu {
+        position: absolute;
+        background-color: red;
+        width: 100%;
+        top: 100%;
+        z-index: 99;
+        display: none;
+    }
+
+    .menu a {
+        padding: 32px 0;
+        font-size: 18px;
+        display: block;
+    }
+
+    .show {
+        display: block;
+    }
+}
+
+/* Hero Section */
+
+.hero {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+.hero .left {}
+
+
+
+/* Old Code */
+body {
+    background-color: #f9fafc;
 }
 
 .brand {
-  font-family: Lato, sans-serif;
-  font-size: 1.4rem;
-  font-weight: 700;
-  color: #4a4a4f;
+    font-family: Lato, sans-serif;
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: #4a4a4f;
 }
 
 .red-o {
-  color: #e84610;
+    color: #e84610;
 }
 
 .thin {
-  font-weight: 300;
+    font-weight: 300;
 }
 
 .light-bg {
-  background-color: #fff;
+    background-color: #fff;
 }
 
 .dark-bg {
-  background-color: #445261;
+    background-color: #445261;
 }
 
 .main-bg {
-  background-color: #f9fafc;
+    background-color: #f9fafc;
 }
 
 .card {
-  border: none;
-  background-color: transparent;
+    border: none;
+    background-color: transparent;
 }
 
 .image-container {
-  position: relative;
+    position: relative;
 }
 
 .image-flash {
-  position: absolute;
-  bottom: 5%;
-  min-width: 30%;
-  left: -2px;
-  background-color: #23bbbb;
+    position: absolute;
+    bottom: 5%;
+    min-width: 30%;
+    left: -2px;
+    background-color: #23bbbb;
 }
 
 .author {
-  color: white;
-  margin: 4px;
-  text-transform: uppercase;
+    color: white;
+    margin: 4px;
+    text-transform: uppercase;
 }
 
 .masthead {
-  margin-top: 10px;
-  overflow: hidden;
-  position: relative;
-  display: inline-block;
-  height: 33vh;
-  width: 100%;
+    margin-top: 10px;
+    overflow: hidden;
+    position: relative;
+    display: inline-block;
+    height: 33vh;
+    width: 100%;
 }
 
 .masthead-text {
-  background-color: #445261;
-  color: white;
-  position: relative;
+    background-color: #445261;
+    color: white;
+    position: relative;
 }
 
 .masthead-image {
-  position: relative;
-  overflow: hidden;
+    position: relative;
+    overflow: hidden;
 }
 
 .masthead-image:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 90%;
-  height: 100%;
-  width: 150%;
-  background: #445261;
-  -webkit-transform: skew(15deg);
-  -moz-transform: skew(15deg);
-  transform: skew(15deg);
-  z-index: 100;
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 90%;
+    height: 100%;
+    width: 150%;
+    background: #445261;
+    -webkit-transform: skew(15deg);
+    -moz-transform: skew(15deg);
+    transform: skew(15deg);
+    z-index: 100;
 }
 
 .post-link {
-  text-decoration: none;
-  color: #445261;
+    text-decoration: none;
+    color: #445261;
 }
 
 .post-link:hover,
 .page-link {
-  color: #e84610;
+    color: #e84610;
 }
 
 .post-title {
-  margin-top: 20%;
-  margin-left: 5%;
+    margin-top: 20%;
+    margin-left: 5%;
 }
 
 .post-subtitle {
-  margin-left: 5%;
-  color: lightgray;
+    margin-left: 5%;
+    color: lightgray;
 }
 
 .btn-signup {
-  background-color: #23bbbb;
-  color: #fff;
+    background-color: #23bbbb;
+    color: #fff;
 }
 
 .btn-signup:hover,
 .btn-signup:active {
-  background-color: #fff;
-  color: #23bbbb;
+    background-color: #fff;
+    color: #23bbbb;
 }
 
 .link {
-  color: #23bbbb;
-  text-decoration: none;
+    color: #23bbbb;
+    text-decoration: none;
 }
 
 .link:hover,
 .link:active {
-  color: #445261;
-  text-decoration: underline;
+    color: #445261;
+    text-decoration: underline;
 }
 
 .btn-like {
-  color: #e84610;
-  border: none;
-  background: transparent;
+    color: #e84610;
+    border: none;
+    background: transparent;
 }
 
 .btn-like:hover,
 .btn-like:active {
-  color: #e84610;
-  background: transparent;
-  border: none;
+    color: #e84610;
+    background: transparent;
+    border: none;
 }
