--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,10 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html class="h-100">
+<html lang="en">
 
 <head>
     <title>Schöneberg Alert</title>
-
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
@@ -13,16 +12,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
 </head>
 
-<body class="d-flex flex-column h-100 main-bg">
+<body>
 
     <!-- Navigation -->
+    <div class="site-container">
+        <nav>
+            <div class="logo">
+                <h2>Schöneberg Alert</h2>
+            </div>
+            <div class="menu">
+                <a href="{% url 'home' %}">Home</a>
+                {% if user.is_authenticated %}
+                <a href="{% url 'account_logout' %}">Logout</a>
+                <a href="{% url 'new_post' %}">Post an Alert</a>
+                {% else %}
+                <a href="{% url 'account_signup' %}">Register</a>
+                <a href="{% url 'account_login' %}">Log in</a>
+                {% endif %}
+            </div>
+            <div class="mobile-menu">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </nav>
+
+
+
+
+
+    </div>
+</body>
+
+    <!--OLD CODE-->
+<body class="d-flex flex-column h-100 main-bg"></body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">Schöneberg<span class="red-o">Alert</span></span></span></a>
@@ -92,6 +116,8 @@
             alert.close();
         }, 2000);
     </script>
+    <script src="../static/script/script.js"></script>
+    <script src="https://kit.fontawesome.com/3944192ca3.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
