--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;700&family=Playfair+Display:wght@800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;700&family=Playfair+Display:wght@800&display=swap");
 
 :root {
     --primary-color: #202020;
-    --secondary-color: #F4F7FC;
+    --secondary-color: #f4f7fc;
     --grey: #a6a6a6;
 }
 
@@ -20,13 +20,13 @@ html {
 }
 
 body {
-    font-family: 'Mulish', sans-serif;
+    font-family: "Mulish", sans-serif;
 }
 
 h1,
 h2,
 h3 {
-    font-family: 'Playfair Display', serif;
+    font-family: "Playfair Display", serif;
     font-weight: 800;
     color: var(--primary-color);
     margin: 1.6rem 0;
@@ -44,7 +44,7 @@ h1 {
     font-size: 4rem;
 }
 
-@media only screen and (max-width:768px) {
+@media only screen and (max-width: 768px) {
     h1 {
         font-size: 3rem;
     }
@@ -142,152 +142,93 @@ nav .menu a {
 .hero {
     display: grid;
     grid-template-columns: 2fr 1fr;
-}
-
-.hero .left {}
-
-
-
-/* Old Code */
-body {
-    background-color: #f9fafc;
-}
-
-.brand {
-    font-family: Lato, sans-serif;
-    font-size: 1.4rem;
-    font-weight: 700;
-    color: #4a4a4f;
-}
-
-.red-o {
-    color: #e84610;
-}
-
-.thin {
-    font-weight: 300;
-}
-
-.light-bg {
-    background-color: #fff;
-}
-
-.dark-bg {
-    background-color: #445261;
-}
-
-.main-bg {
-    background-color: #f9fafc;
-}
-
-.card {
-    border: none;
-    background-color: transparent;
-}
-
-.image-container {
     position: relative;
 }
 
-.image-flash {
+.hero .left {
+    background-image: url('/media/hero.jpeg');
+    background-size: cover;
+    height: 60vh;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.hero .right {
+    background-color: #c8d366;
+}
+
+.hero .content-box {
     position: absolute;
-    bottom: 5%;
-    min-width: 30%;
-    left: -2px;
-    background-color: #23bbbb;
+    background-color: #fffffc;
+    padding: 32px;
+    width: 35%;
+    top: 50%;
+    left: 65%;
+    transform: translate(-40%, -50%);
 }
 
-.author {
-    color: white;
-    margin: 4px;
-    text-transform: uppercase;
+@media only screen and (max-width: 768px) {
+    .hero {
+        grid-template-columns: 1fr;
+    }
+
+    .hero .content-box {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 80%;
+        background-color: #fff;
+    }
 }
 
-.masthead {
-    margin-top: 10px;
-    overflow: hidden;
-    position: relative;
+/* Blog */
+
+main {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    margin-top: 50px;
+    grid-gap: 60px;
+}
+
+.blog {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 48px;
+}
+
+.blog .thumbnail {
+    object-fit: contain;
+}
+
+.blog-post {
+    background-color: var(--secondary-color);
+    margin: 24px 0;
+    padding: 16px;
+}
+
+.blog-content h3 {
+    font-size: 2.5rem;
+    letter-spacing: 1.5px;
+}
+
+.blog-content {
+    margin-top: 24px;
+}
+
+.pagination {
     display: inline-block;
-    height: 33vh;
-    width: 100%;
 }
 
-.masthead-text {
-    background-color: #445261;
-    color: white;
-    position: relative;
-}
-
-.masthead-image {
-    position: relative;
-    overflow: hidden;
-}
-
-.masthead-image:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 90%;
-    height: 100%;
-    width: 150%;
-    background: #445261;
-    -webkit-transform: skew(15deg);
-    -moz-transform: skew(15deg);
-    transform: skew(15deg);
-    z-index: 100;
-}
-
-.post-link {
+.pagination a {
+    color: var(--primary-color);
+    float: left;
+    padding: 8px 16px;
     text-decoration: none;
-    color: #445261;
+    border: 0;
 }
 
-.post-link:hover,
-.page-link {
-    color: #e84610;
-}
-
-.post-title {
-    margin-top: 20%;
-    margin-left: 5%;
-}
-
-.post-subtitle {
-    margin-left: 5%;
-    color: lightgray;
-}
-
-.btn-signup {
-    background-color: #23bbbb;
-    color: #fff;
-}
-
-.btn-signup:hover,
-.btn-signup:active {
-    background-color: #fff;
-    color: #23bbbb;
-}
-
-.link {
-    color: #23bbbb;
-    text-decoration: none;
-}
-
-.link:hover,
-.link:active {
-    color: #445261;
-    text-decoration: underline;
-}
-
-.btn-like {
-    color: #e84610;
-    border: none;
-    background: transparent;
-}
-
-.btn-like:hover,
-.btn-like:active {
-    color: #e84610;
-    background: transparent;
-    border: none;
+@media only screen and (max-width: 768px) {
+    .blog {
+        grid-template-columns: 1fr;
+    }
 }
