--- a/templates/index.html
+++ b/templates/index.html
@@ -1,102 +1,69 @@
 {% extends "base.html" %} {% block content %}
 <!-- Hero section -->
 <section class="hero">
-    <div class="left"></div>
-    <div class="right">
-        <div class="content-box">
-            <span>Your Community Pinboard!</span>
-            <h1>Join our neighborhood's digital pinboard.</h1>
-        </div>
+  <div class="left"></div>
+  <div class="right">
+    <div class="content-box">
+      <span>Your Community Pinboard!</span>
+      <h1>Join our neighborhood's digital pinboard.</h1>
     </div>
+  </div>
 </section>
-
-
-<div class="container-fluid">
-  <div class="row">
-    <h1>SCHÖNEBERG ALERT!</h1>
-    <p>Your community digital pinboard</p>
-    <p>Post an Alert to your neighbors</p>
+<div class="row">
+  <!-- Category Filter -->
+  <div class="col-12 mt-3 left">
+    <a href="{% url 'home' %}">Clear Filter</a>
+    <ul>
+      {% for category in categories %}
+      <li
+        class="py-2 px-2 rounded-xl{% if category.id == category_id %} bg-gray-200{% endif %}"
+      >
+        <a href="{% url 'home' %}?query={{ query }}&category={{ category.id }}"
+          >{{ category.name }}</a
+        >
+      </li>
+      {% endfor %}
+    </ul>
   </div>
 </div>
-
-<div class="container-fluid">
-  <div class="row">
-    <!-- Category Filter -->
-    <div class="col-12 mt-3 left">
-      <a href="{% url 'home' %}">Clear Filter</a>
-      <ul>
-        {% for category in categories %}
-        <li
-          class="py-2 px-2 rounded-xl{% if category.id == category_id %} bg-gray-200{% endif %}"
-        >
-          <a
-            href="{% url 'home' %}?query={{ query }}&category={{ category.id }}"
-            >{{ category.name }}</a
-          >
-        </li>
-        {% endfor %}
-      </ul>
-    </div>
-  </div>
-  <div class="row">
-    <!-- Blog Entries Column -->
-    <div class="col-12 mt-3 left">
-      <div class="row">
-        {% for post in post_list %}
-        <div class="col-md-4">
-          <div class="card mb-4">
-            <div class="card-body">
-              <div class="image-container">
-                {% if "placeholder" in post.featured_image.url %}
-                <img
-                  class="card-img-top"
-                  src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg"
-                />
-                {% else %}
-                <img
-                  class="card-img-top"
-                  src=" {{ post.featured_image.url }}"
-                />
-                {% endif %}
-              </div>
-              <a href="{% url 'post_detail' post.slug %}" class="post-link">
-                <h2 class="card-title">{{ post.title }}</h2>
-                <p class="card-text">{{ post.excerpt }}</p>
-                <p class="card-text">{{ post.category }}</p>
-              </a>
-              <hr />
-              <p class="card-text text-muted h6">
-                {{ post.created_on}} <i class="far fa-heart"></i>
-                <!--Stop-->
-                {{ post.number_of_likes }}
-              </p>
-            </div>
-          </div>
-        </div>
-        {% if forloop.counter|divisibleby:3 %}
+<!-- New Blog Section-->
+<div class="site-container">
+  <main>
+    {% for post in post_list %}
+    <div class="blog">
+      <div class="thumbnail">
+        {% if "placeholder" in post.featured_image.url %}
+        <img
+          src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg"
+          alt=""
+        />
+        {% else %}
+        <img src=" {{ post.featured_image.url }}" />
+        {% endif %}
       </div>
-      <div class="row">{% endif %} {% endfor %}</div>
-    </div>
-  </div>
-  {% if is_paginated %}
-  <nav aria-label="Page navigation">
-    <ul class="pagination justify-content-center">
-      {% if page_obj.has_previous %}
-      <li>
-        <a href="?page={{ page_obj.previous_page_number }}" class="page-link"
-          >&laquo; PREV
-        </a>
-      </li>
-      {% endif %} {% if page_obj.has_next %}
-      <li>
-        <a href="?page={{ page_obj.next_page_number }}" class="page-link">
-          NEXT &raquo;</a
+      <div class="blog-content">
+        {{ post.title }}<a href="{% url 'post_detail' post.slug %}"
+          ><h3>{{ post.title }}</h3></a
         >
-      </li>
-
-      {% endif %}
-    </ul>
-  </nav>
-  {% endif %}
+        <p>{{ post.excerpt }}</p>
+        <h4>{{ post.category }}</h4>
+        <hr />
+        <p class="card-text text-muted h6">
+          {{ post.created_on}} <i class="far fa-heart"></i>
+          <!--Stop-->
+          {{ post.number_of_likes }}
+        </p>
+      </div>
+      {% if forloop.counter|divisibleby:3 %}
+      <div>{% endif %} {% endfor %}</div>
+      <div class="pagination">
+        {% if page_obj.has_previous %}
+        <a href="?page={{ page_obj.previous_page_number }}">&laquo; PREV </a>
+        {% endif %} {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}"> NEXT &raquo;</a>
+        {% endif %}
+      </div>
+    </div>
+  </main>
 </div>
 {%endblock%}
