--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -2,7 +2,7 @@
 <!--Stop-->
 {% load i18n %}
 <!--Stop-->
-{% block head_title %}{% trans Signup" %}{% endblock head_title %}
+{% block head_title %}{% trans "Signup" %}{% endblock head_title %}
 <!--Stop-->
 {% block content %}
 <h1>{% trans "Sign Up" %}</h1>
