--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,7 +119,7 @@ nav .menu a {
 
     .menu {
         position: absolute;
-        background-color: red;
+        background-color: var(--secondary-color);
         width: 100%;
         top: 100%;
         z-index: 99;
@@ -146,7 +146,7 @@ nav .menu a {
 }
 
 .hero .left {
-    background-image: url('../media/hero.png');
+    background-image: url("../media/hero.png");
     background-size: cover;
     height: 60vh;
     background-repeat: no-repeat;
