--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 </section>
 <div class="row">
   <!-- Category Filter -->
-  <div class="col-12 mt-3 left">
+  <div class="category-filter">
     <a href="{% url 'home' %}">Clear Filter</a>
     <ul>
       {% for category in categories %}
@@ -26,7 +26,7 @@
     </ul>
   </div>
 </div>
-<!-- New Blog Section-->
+<!--Blog Section-->
 <div class="site-container">
   <main>
     {% for post in post_list %}
