--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -29,9 +29,7 @@
           value="{{ redirect_field_value }}"
         />
         {% endif %}
-        <button class="btn btn-signup right" type="submit">
-          {% trans "Sign In" %}
-        </button>
+        <button class="btn-primary" type="submit">{% trans "Sign In" %}</button>
       </form>
     </div>
   </div>
