--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -4,9 +4,7 @@
   <div class="container">
     <div class="row g-0">
       <div class="col-md-6 masthead-text">
-        <!-- Post title goes in these h1 tags -->
         <h1 class="post-title">{{ post.title }}</h1>
-        <!-- Post author goes before the | the post's created date goes after -->
         <p class="post-subtitle">
           {{ post.author }} | {{ post.created_on }} | {{ post.category }}
         </p>
@@ -20,7 +18,6 @@
         {% endif %}
       </div>
       <div class="d-none d-md-block col-md-6 masthead-image">
-        <!-- The featured image URL goes in the src attribute -->
         {% if "placeholder" in post.featured_image.url %}
         <img
           src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg"
@@ -38,8 +35,6 @@
   <div class="row">
     <div class="col card mb-4 mt-3 left top">
       <div class="card-body">
-        <!-- The post content goes inside the card-text. -->
-        <!-- Use the | safe filter inside the template tags -->
         <p class="card-text">{{ post.content | safe }}</p>
         <div class="row">
           <div class="col-1">
@@ -73,16 +68,13 @@
               {% else %}
               <span class="text-secondary"><i class="far fa-heart"></i></span>
               {% endif %}
-              <!-- The number of likes goes before the closing strong tag -->
               <span class="text-secondary">{{ post.number_of_likes }} </span>
             </strong>
           </div>
           <div class="col-1">
             {% with comments.count as total_comments %}
             <strong class="text-secondary"
-              ><i class="far fa-comments"></i>
-              <!-- Our total_comments variable goes before the closing strong tag -->
-              {{ total_comments }}</strong
+              ><i class="far fa-comments"></i> {{ total_comments }}</strong
             >
             {% endwith %}
           </div>
