--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %} {% block content %}
 <!-- Hero section -->
 <section class="hero">
-  <div class="left"></div>
+  <div class="left">
+    <img src="/media/hero.png" alt="Hero Image" />
+  </div>
   <div class="right">
     <div class="content-box">
       <span>Your Community Pinboard!</span>
