Changed background color to hero

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %} {% block content %}
 <!-- Hero section -->
 <section class="hero">
-  <div class="left">
-    <img src="/media/hero.png" alt="Hero Image" />
-  </div>
+  <div class="left"></div>
   <div class="right">
     <div class="content-box">
       <span>Your Community Pinboard!</span>
