--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -6,9 +6,9 @@
 <!--Stop-->
 {% block content %}
 <div class="center-content">
-  <h1>{% trans "Sign Out" %}</h1>
+  <h1>{% trans "Logout" %}</h1>
 
-  <p>{% trans 'Are you sure you want to sign out?' %}</p>
+  <p>{% trans 'Are you sure you want to log out?' %}</p>
 
   <form method="post" action="{% url 'account_logout' %}">
     {% csrf_token %} {% if redirect_field_value %}
