--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     <div class="site-container">
         <nav>
             <div class="logo">
-                <h2>Schöneberg <i class="fa-regular fa-bell"></i> Alert</h2>
+                <a href="{% url 'home' %}"><h2>Schöneberg <i class="fa-regular fa-bell"></i> Alert</h2></a>
             </div>
             <div class="menu">
                 <a href="{% url 'home' %}">Home</a>
