--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
         {{ post.title }}<a href="{% url 'post_detail' post.slug %}"
           ><h3>{{ post.title }}</h3></a
         >
-        <p>{{ post.excerpt }}</p>
+        <!--    <p>{{ post.excerpt }}</p> -->
         <h4>{{ post.category }}</h4>
         <hr />
         <p class="card-text text-muted h6">
