--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -18,7 +18,7 @@
       value="{{ redirect_field_value }}"
     />
     {% endif %}
-    <button class="btn-primary" type="submit">{% trans 'Sign Out' %}</button>
+    <button class="btn-primary" type="submit">{% trans 'Log out' %}</button>
   </form>
 </div>
 
