--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <div class="right">
     <div class="content-box">
       <span>Your Community Pinboard!</span>
-      <h1>Join our neighborhood's digital pinboard.</h1>
+      <h1>Join our neighborhood's digital pinboard:<h1 style="color: #c51616">Stay Alert!</h1></h1>
     </div>
   </div>
 </section>
@@ -36,7 +36,7 @@
       <div class="thumbnail">
         {% if "placeholder" in post.featured_image.url %}
         <img
-          src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg"
+          src="https://res.cloudinary.com/dg6tnws5o/image/upload/v1698231387/default_rjx9mz.png"
           alt=""
         />
         {% else %}
@@ -47,7 +47,6 @@
         {{ post.title }}<a href="{% url 'post_detail' post.slug %}"
           ><h3>{{ post.title }}</h3></a
         >
-        <!--    <p>{{ post.excerpt }}</p> -->
         <h4>{{ post.category }}</h4>
         <hr />
         <p class="card-text text-muted h6">
