--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -20,7 +20,7 @@
       <div class="d-none d-md-block col-md-6 masthead-image">
         {% if "placeholder" in post.featured_image.url %}
         <img
-          src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg"
+          src="https://res.cloudinary.com/dg6tnws5o/image/upload/v1698231387/default_rjx9mz.png"
           width="100%"
         />
         {% else %}
