--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,10 @@
   <div class="right">
     <div class="content-box">
       <span>Your Community Pinboard!</span>
-      <h1>Join our neighborhood's digital pinboard:<h1 style="color: #c51616">Stay Alert!</h1></h1>
+      <h1>
+        Join our neighborhood's digital pinboard:
+        <h1 style="color: #c51616">Stay Alert!</h1>
+      </h1>
     </div>
   </div>
 </section>
@@ -28,43 +31,41 @@
     </ul>
   </div>
 </div>
-<!--Blog Section-->
-<div class="site-container">
-  <main>
+<!-- New Blog Section-->
+<section id="blog">
+  <div class="blog-container">
     {% for post in post_list %}
-    <div class="blog">
-      <div class="thumbnail">
+    <div class="blog-box">
+      <div class="blog-img">
         {% if "placeholder" in post.featured_image.url %}
         <img
           src="https://res.cloudinary.com/dg6tnws5o/image/upload/v1698231387/default_rjx9mz.png"
           alt=""
         />
         {% else %}
-        <img src=" {{ post.featured_image.url }}" />
+        <img src="{{ post.featured_image.url }}" />
         {% endif %}
       </div>
-      <div class="blog-content">
-        {{ post.title }}<a href="{% url 'post_detail' post.slug %}"
-          ><h3>{{ post.title }}</h3></a
+      <div class="blog-text">
+        <span
+          >{{ post.created_on}} <i class="far fa-heart"></i>
+          <!--Stop line break-->
+          {{ post.number_of_likes }}</span
         >
-        <h4>{{ post.category }}</h4>
-        <hr />
-        <p class="card-text text-muted h6">
-          {{ post.created_on}} <i class="far fa-heart"></i>
-          <!--Stop-->
-          {{ post.number_of_likes }}
-        </p>
-      </div>
-      {% if forloop.counter|divisibleby:3 %}
-      <div>{% endif %} {% endfor %}</div>
-      <div class="pagination">
-        {% if page_obj.has_previous %}
-        <a href="?page={{ page_obj.previous_page_number }}">&laquo; PREV </a>
-        {% endif %} {% if page_obj.has_next %}
-        <a href="?page={{ page_obj.next_page_number }}"> NEXT &raquo;</a>
-        {% endif %}
+        <a href="{% url 'post_detail' post.slug %}" class="blog-title"
+          >{{ post.title }}</a
+        >
+        <p>{{ post.category }}</p>
       </div>
     </div>
-  </main>
-</div>
+    {% endfor %}
+    <div class="pagination">
+      {% if page_obj.has_previous %}
+      <a href="?page={{ page_obj.previous_page_number }}">&laquo; PREV </a>
+      {% endif %} {% if page_obj.has_next %}
+      <a href="?page={{ page_obj.next_page_number }}"> NEXT &raquo;</a>
+      {% endif %}
+    </div>
+  </div>
+</section>
 {%endblock%}
