--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,6 +57,10 @@ button {
   h1 {
     font-size: 3rem;
   }
+
+  a h2 {
+    font-size: 2.5rem;
+  }
 }
 
 h2 {
@@ -76,7 +80,7 @@ h4 {
 span {
   color: var(--grey);
   font-size: 1.5rem;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 a {
@@ -286,7 +290,6 @@ nav .menu a {
 
 footer {
   background-color: #212124;
-  margin-top: 50px;
   padding: 100px 0;
 }
 
