--- a/templates/base.html
+++ b/templates/base.html
@@ -85,6 +85,11 @@
         </div>
     </footer>
     <script src="../static/script/script.js"></script>
+    <script>setTimeout(function () {
+            let messages = document.getElementById("msg");
+            let alert = new bootstrap.Alert(messages);
+            alert.close();
+        }, 2000);</script>
     <script src="https://kit.fontawesome.com/3944192ca3.js" crossorigin="anonymous"></script>
 </body>
 </html>
