--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -17,7 +17,7 @@
         >
         {% endif %}
       </div>
-      <div class="d-none d-md-block col-md-6 masthead-image">
+      <div class="col-md-6 masthead-image">
         {% if "placeholder" in post.featured_image.url %}
         <img
           src="https://res.cloudinary.com/dg6tnws5o/image/upload/v1698399023/default2_u9ifqc.png"
