--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -8,6 +8,7 @@
         <p class="post-subtitle">
           {{ post.author }} | {{ post.created_on }} | {{ post.category }}
         </p>
+        <p class="card-text">{{ post.content | safe }}</p>
         {% if user.is_authenticated and user == post.author %}
         <a href="{% url 'edit_post' post.slug %}" class="btn btn-primary"
           >Edit</a
@@ -34,8 +35,7 @@
 <div class="container">
   <div class="row">
     <div class="col card mb-4 mt-3 left top">
-      <div class="card-body">
-        <p class="card-text">{{ post.content | safe }}</p>
+      <div class="card-body"></div>
         <div class="row">
           <div class="col-1">
             <strong>
