Modified style to blog section

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -290,8 +290,8 @@ nav .menu a {
 
 footer {
     background-color: #212124;
-    padding: 100px 0;
-    margin-top: 20;
+    padding: 60px 0;
+    margin-top: 20px;
 }
 
 footer p,
