--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock head_title %}
 <!--Stop-->
 {% block content %}
-<div class="center-content">
+<div class="center-content" id="logout" style="background: #b8e0a8">
   <h1>{% trans "Logout" %}</h1>
 
   <p>{% trans 'Are you sure you want to log out?' %}</p>
