--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Signup" %}{% endblock head_title %}
 <!--Stop-->
 {% block content %}
-<div class="center-content">
+<div class="center-content" style="background: #b8e0a8">
   <h1>{% trans "Sign Up" %}</h1>
 
   <p>
