--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -6,7 +6,7 @@
 <!--Stop-->
 {% block content %}
 <div class="center-content" style="background: #b8e0a8">
-  <h1>{% trans "Sign Up" %}</h1>
+  <h1>{% trans "Register" %}</h1>
 
   <p>
     {% blocktrans %}Already have an account? Then please
@@ -27,7 +27,7 @@
     />
     {% endif %}
     <button class="btn-primary" type="submit">
-      {% trans "Sign Up" %} &raquo;
+      {% trans "Register" %} &raquo;
     </button>
   </form>
 </div>
