--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock head_title %}
 <!--Stop-->
 {% block content %}
-<div class="container" id="login" style="background: #b8e0a8">
+<div class="container" id="login">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
       <h3>{% trans "Sign In" %}</h3>
