--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -13,7 +13,7 @@
         <a href="{% url 'edit_post' post.slug %}" class="btn btn-primary"
           >Edit</a
         >
-        <a href="{% url 'delete_post' post.slug %}" class="btn btn-danger"
+        <a href="{% url 'confirm_delete' post.slug %}" class="btn btn-danger"
           >Delete</a
         >
         {% endif %}
@@ -87,7 +87,7 @@
       <hr />
     </div>
   </div>
-  <div class="row">
+  <div class="row" id="comments-box">
     <div class="col-md-8 card mb-4 mt-3">
       <h3>Comments:</h3>
       <div class="card-body">
