--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -13,7 +13,7 @@
         <a href="{% url 'edit_post' post.slug %}" class="btn btn-primary"
           >Edit</a
         >
-        <a href="{% url 'confirm_delete' post.slug %}" class="btn btn-danger"
+        <a href="{% url 'post_delete' post.slug %}" class="btn btn-danger"
           >Delete</a
         >
         {% endif %}
