--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %} {% block content %}
-<div class="center-content" style="background: #b8e0a8">
+<div class="center-content">
   <h2>{% if editing %}Edit{% else %}Post{% endif %} an Alert</h2>
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %} {{ form.as_p }}
-    <button class="btn-primary" type="submit">
-      {% if editing %}Update{% else %}Submit{% endif %}
-    </button>
-  </form>
+  <div class="form-group">
+    <form method="post" enctype="multipart/form-data">
+      {% csrf_token %} {{ form.as_p }}
+      <button class="btn-primary" type="submit">
+        {% if editing %}Update{% else %}Post{% endif %}
+      </button>
+    </form>
+  </div>
 </div>
 {% endblock %}
