--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -52,7 +52,7 @@
                   value="{{post.slug}}"
                   class="btn-like"
                 >
-                  <i class="fas fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
                 </button>
                 {% else %}
                 <button
@@ -61,12 +61,12 @@
                   value="{{post.slug}}"
                   class="btn-like"
                 >
-                  <i class="far fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
                 </button>
                 {% endif %}
               </form>
               {% else %}
-              <span class="text-secondary"><i class="far fa-heart"></i></span>
+              <span class="text-secondary"><i class="fa-solid fa-heart"></i></span>
               {% endif %}
               <span class="text-secondary">{{ post.number_of_likes }} </span>
             </strong>
@@ -74,7 +74,7 @@
           <div class="col-1">
             {% with comments.count as total_comments %}
             <strong class="text-secondary"
-              ><i class="far fa-comments"></i> {{ total_comments }}</strong
+              ><i class="fa-solid fa-comment"></i> {{ total_comments }}</strong
             >
             {% endwith %}
           </div>
