--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 <div class="center-content">
   <h2>{% if editing %}Edit{% else %}Post{% endif %} an Alert</h2>
-  <div class="form-group">
+  <div class="form-group" id="new-post">
     <form method="post" enctype="multipart/form-data">
       {% csrf_token %} {{ form.as_p }}
       <button class="btn-primary" type="submit">
