--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -8,12 +8,12 @@
 <div class="container" id="login">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
-      <h3>{% trans "Sign In" %}</h3>
+      <h1>{% trans "Sign In" %}</h1>
 
       <p>
         {% blocktrans %} Welcome back to Schöneberg Alert! To leave a comment or
         like an Alert, please log in. If you have not created an account yet,
-        then <a class="link" href="{{ signup_url }}">sign up</a> first.
+        then <a href="{{ signup_url }}">sign up</a> first.
         <!--Stop-->
         {% endblocktrans %}
       </p>
