--- a/templates/post_delete.html
+++ b/templates/post_delete.html
@@ -11,7 +11,13 @@
   <p>{% trans 'Are you sure you want to delete your Alert?' %}</p>
   <form action="{% url 'post_delete' post.slug %}" method="post">
     {% csrf_token %}
-    <button type="submit" class="btn btn-danger">Confirm</button>
+    <button
+      type="submit"
+      class="btn btn-danger"
+      aria-label="Confirm deletion of Alert"
+    >
+      Confirm
+    </button>
   </form>
 </div>
 
