--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -7,7 +7,7 @@
       <button
         class="btn-primary"
         type="submit"
-        aria-label="{% if editing % %}Update{% else %}Post{% endif %}"
+        aria-label="{% if editing %}Update{% else %}Post{% endif %}"
       >
         {% if editing %}Update{% else %}Post{% endif %}
       </button>
