--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock head_title %}
 <!--Stop-->
 {% block content %}
-<div class="container" id="login">
+<div class="container" id="login" aria-label="Sign in section">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
       <h1>{% trans "Sign In" %}</h1>
@@ -21,7 +21,12 @@
   </div>
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
-      <form class="login" method="POST" action="{% url 'account_login' %}">
+      <form
+        class="login"
+        method="POST"
+        action="{% url 'account_login' %}"
+        aria-label="Sign in Form"
+      >
         {% csrf_token %} {{ form.as_p }} {% if redirect_field_value %}
         <input
           type="hidden"
@@ -29,7 +34,9 @@
           value="{{ redirect_field_value }}"
         />
         {% endif %}
-        <button class="btn-primary" type="submit">{% trans "Sign In" %}</button>
+        <button class="btn-primary" type="submit" aria-label="Sign in">
+          {% trans "Sign In" %}
+        </button>
       </form>
     </div>
   </div>
