--- a/templates/base.html
+++ b/templates/base.html
@@ -90,5 +90,8 @@
             alert.close();
         }, 2000);</script>
     <script src="https://kit.fontawesome.com/3944192ca3.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
