--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -35,43 +35,32 @@
 <div class="container">
   <div class="row">
     <div class="col card mb-4 mt-3 left top">
-      <div class="card-body"></div>
+      <div class="card-body">
         <div class="row">
           <div class="col-1">
-            <strong>
-              {% if user.is_authenticated %}
-              <form
-                class="d-inline"
-                action="{% url 'post_like' post.slug %}"
-                method="POST"
-              >
-                {% csrf_token %} {% if not liked %}
-                <button
-                  type="submit"
-                  name="blogpost_id"
-                  value="{{post.slug}}"
-                  class="btn-like" 
-                  aria-label="Like post"
-                >
-                <i class="fa-solid fa-heart"></i>
-                </button>
-                {% endif %}
-              </form>
-            {% endif %}
-            </strong>
-          </div>
-          <div class="col-1">
-        <span><i class="far fa-heart"></i>
-            <!--Stop line break-->
-            {{ post.number_of_likes }} <i class="far fa-comment"></i>
-            <!--Stop line break-->
-            {{ post.number_of_comments }}
-        </span>
+            <span>
+                {% if user.is_authenticated %}
+                <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
+                    {% csrf_token %} {% if not liked %}
+                    <button type="submit" name="blogpost_id" value="{{post.slug}}" class="like-button" aria-label="Like post">
+                        <i class="far fa-heart"></i>
+                    </button>
+                    {% else %}
+                    <i class="far fa-heart"></i>
+                    {% endif %}
+                </form>
+                {% endif %}          
+                <!--Stop line break-->
+                {{ post.number_of_likes }} <i class="far fa-comment"></i>
+                <!--Stop line break-->
+                {{ post.number_of_comments }}
+            </span>
           </div>
         </div>
       </div>
     </div>
-  </div>
+    </div>
+</div>
   <div class="row">
     <div class="col">
       <hr />
