Reorganized style.css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,16 +60,6 @@ p a {
     text-decoration: none;
 }
 
-@media only screen and (max-width: 768px) {
-    h1 {
-        font-size: 3rem;
-    }
-
-    a h2 {
-        font-size: 2.5rem;
-    }
-}
-
 h2 {
     font-size: 3rem;
     letter-spacing: 1.5px;
@@ -113,6 +103,7 @@ hr {
 }
 
 /* Nagivation */
+
 nav {
     position: relative;
     display: flex;
@@ -133,32 +124,6 @@ nav .menu a.active {
 
 .mobile-menu {
     display: none;
-}
-
-@media screen and (max-width: 768px) {
-    .mobile-menu {
-        display: block;
-        font-size: 24px;
-    }
-
-    .menu {
-        position: absolute;
-        background-color: var(--secondary-color);
-        width: 100%;
-        top: 100%;
-        z-index: 99;
-        display: none;
-    }
-
-    .menu a {
-        padding: 32px 0;
-        font-size: 18px;
-        display: block;
-    }
-
-    .show {
-        display: block;
-    }
 }
 
 /* Hero Section */
@@ -189,20 +154,6 @@ nav .menu a.active {
     top: 50%;
     left: 65%;
     transform: translate(-40%, -50%);
-}
-
-@media screen and (max-width: 768px) {
-    .hero {
-        grid-template-columns: 1fr;
-    }
-
-    .hero .content-box {
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 80%;
-        background-color: #fff;
-    }
 }
 
 /* Blog Section */
@@ -271,29 +222,6 @@ nav .menu a.active {
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     margin: 20px 0px;
-}
-
-@media screen and (max-width: 1250px) {
-    .blog-box {
-        width: 300px;
-    }
-}
-
-@media screen and (max-width: 1100px) {
-    .blog-box {
-        width: 70%;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .blog-box {
-        margin: 20px 10px;
-        width: 100%;
-    }
-
-    #blog {
-        padding: 20px;
-    }
 }
 
 /* Footer */
@@ -385,17 +313,6 @@ a {
     align-items: center;
 }
 
-@media screen and (min-width: 769px) {
-    #logout {
-        padding: 100px 0 200px 0;
-    }
-
-    #login {
-        padding: 30px 0 30px 0;
-        border: 0 100px 0 100px;
-    }
-}
-
 #login {
     width: 100%;
     max-width: 100%;
@@ -421,12 +338,6 @@ a {
     width: 50%;
 }
 
-@media screen and (max-width: 768px) {
-    .new-post {
-        width: 90%;
-    }
-}
-
 /* Like Button */
 .like-button {
     border: none;
@@ -434,4 +345,88 @@ a {
     padding: 0;
     font-size: inherit;
     color: inherit;
+}
+
+/* Media Queries */
+
+@media screen and (min-width: 769px) {
+    #logout {
+        padding: 100px 0 200px 0;
+    }
+
+    #login {
+        padding: 30px 0 30px 0;
+        border: 0 100px 0 100px;
+    }
+}
+
+@media screen and (max-width: 1250px) {
+    .blog-box {
+        width: 300px;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .blog-box {
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    h1 {
+        font-size: 3rem;
+    }
+
+    a h2 {
+        font-size: 2.5rem;
+    }
+
+    .mobile-menu {
+        display: block;
+        font-size: 24px;
+    }
+
+    .menu {
+        position: absolute;
+        background-color: var(--secondary-color);
+        width: 100%;
+        top: 100%;
+        z-index: 99;
+        display: none;
+    }
+
+    .menu a {
+        padding: 32px 0;
+        font-size: 18px;
+        display: block;
+    }
+
+    .show {
+        display: block;
+    }
+
+    .hero {
+        grid-template-columns: 1fr;
+    }
+
+    .hero .content-box {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 80%;
+        background-color: #fff;
+    }
+
+    .blog-box {
+        margin: 20px 10px;
+        width: 100%;
+    }
+
+    #blog {
+        padding: 20px;
+    }
+
+    .new-post {
+        width: 90%;
+    }
 }
